2008-05-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* reflection.c (mono_type_get_object): Don't store the suplied
	MonoType with type_hash. A caller which pass a type that
	was mono_metadata_type_dup'ed cannot free it reliably, as type_hash
	might end with a pointer to freed memory.
	The solution is to use byval_arg or this_arg from the associated
	MonoClass of the supplied type.

2008-05-29  Zoltan Varga  <vargaz@gmail.com>

	* icall.c: Revert the rest of the last change as it breaks the build too.

2008-05-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* icall.c: Revert a leak fix as it's breaking the build.

2008-05-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* appdomain.c (mono_make_shadow_copy): Fix another leak of dir_name.

2008-05-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* appdomain.c (mono_make_shadow_copy): We leaked dir_name.

2008-05-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* icall.c: Fix some memory leaks.

2008-05-29  Dick Porter  <dick@ximian.com>

	* threadpool.c (mono_thread_pool_remove_socket): Always remove the
	async socket operations from the pending list when a socket
	closes.  Leaving it until the threadpool services the event
	exposes a race condition when a socket descriptor is reused.
	Fixes bug 377589.

2008-05-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* object.c: Fix negative index check for array alocation.

2008-05-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* icall.c, marshal.c: Delegate wrappers should skip visibility.
	This check is performed by the verifier for IL created delegates
	and by Delegate::CreateDelegate for programatically created ones.
	Fixes #372406.

2008-05-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* sockey-io.c (ves_icall_System_Net_Sockets_Socket_Select_internal):
	Fix code to use mono_array_size_t instead of int.

	Based on patch by Luis F. Ortiz.
	Contributed under X11 license.
	http://lists.ximian.com/pipermail/mono-devel-list/2008-May/027995.html

2008-05-28 Rodrigo Kumpera  <rkumpera@novell.com>
